--- a/data/index.html
+++ b/data/index.html
@@ -310,6 +310,7 @@ return RecordRTC}),RecordRTC.getFromDisk=function(type,callback){if(!callback)th
         
 
         <script type="text/javascript">
+            //console.log = window.alert.bind(window);
             var recorder; // globally accessible
             var video = document.getElementById('your-video-id');
 
@@ -367,9 +368,9 @@ return RecordRTC}),RecordRTC.getFromDisk=function(type,callback){if(!callback)th
                     const ffmpeg = createFFmpeg({
                         log: true,
                     });
-                    //alert("started Load");
+                    alert("started Load");
                     await ffmpeg.load();
-                    //alert("fin Load");
+                    alert("fin Load");
                     ffmpeg.setLogger(({ type, message }) => {
                         //alert(message);
                         /*
