custom mjpeg encoding

--- a/svelte/public/index.html
+++ b/svelte/public/index.html
@@ -15,9 +15,14 @@
     <meta name="apple-mobile-web-app-title" content="Svelte PWA" />
     <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png" />
 
+    <meta http-equiv="origin-trial" content="AgrLhNGM/MQUMTHtJgkK3Zm94Wf4Eq7eFLbwYpYgRk+FoJjOVyjM4mkmEIroenlNO2V8akU9LYzDoyUpWb1uqAUAAABgeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwODAiLCJmZWF0dXJlIjoiVW5yZXN0cmljdGVkU2hhcmVkQXJyYXlCdWZmZXIiLCJleHBpcnkiOjE2ODgwODMxOTl9">
+    
+
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/build/bundle.css" />
+
+    
 
     <script>
       'use strict';
