--- a/svelte/public/index.html
+++ b/svelte/public/index.html
@@ -55,13 +55,13 @@ return RecordRTC}),RecordRTC.getFromDisk=function(type,callback){if(!callback)th
     </noscript>
 
     <script>
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker.register("/service-worker.js").then((reg) => {
-            console.log("Service worker registered.", reg);
-          });
-        });
-      }
+      // if ("serviceWorker" in navigator) {
+      //   window.addEventListener("load", () => {
+      //     navigator.serviceWorker.register("/service-worker.js").then((reg) => {
+      //       console.log("Service worker registered.", reg);
+      //     });
+      //   });
+      // }
     </script>
   </body>
 </html>
